<resources>
    <string name="app_name">balance</string>
    <string name="recharge_remind">资金存入交易所账户，受政府监控，安全无风险\n新手充值50元送18元代金券</string>
    <string name="recharge_select_method">选择支付方式</string>

    <string name="recharge_wechat">微信支付</string>
    <string name="recharge_alipay">支付宝</string>
    <string name="recharge_unipay">银联支付</string>

    <string name="recharge_wechat_remind">仅支持微信4.2及以上版本</string>
    <string name="recharge_alipay_remind"></string>
    <string name="recharge_unipay_remind">跳转到银联官方页面</string>
    <string name="go_recharge">去充值</string>
    <string name="recharge_wechat_qr">使用微信扫码支付</string>
    <string name="recharge_alipay_qr">使用支付宝扫码支付</string>

    <string name="how_to">如何操作？</string>
    <string name="recharge_wechat_remind_1">截图保存二维码到相册</string>
    <string name="recharge_wechat_remind_2">打开微信 → 打开扫一扫 → 点击右上角相册 → 选择保存的二维码</string>
    <string name="recharge_alipay_remind_2">打开支付宝 → 打开扫一扫 → 点击右上角相册 → 选择保存的二维码</string>
    <string name="save_to_gallery">保存收款码到相册</string>
    <string name="recharge_succ">充值成功</string>
    <string name="go_balance">查看资金</string>
    <string name="recharge_fail">充值失败</string>
    <string name="contact_service">联系客服</string>
    <string name="i_know">知道了</string>
    <string name="recharge_fail_remind">充值失败，请联系客服。给您造成的不便，敬请谅解</string>
    <string name="deposit_withdraw_his">充值提现记录</string>
    <string name="deposit_his">充值记录</string>
    <string name="withdraw_his">提现记录</string>
    <string name="withdraw_title_yuan">提现金额（元）</string>
    <string name="withdraw_amount">提现金额</string>
    <string name="withdraw_max">可提现(元)</string>
    <string name="withdraw_all">全部提现</string>
    <string name="card_number">卡号</string>
    <string name="bank_user_name">户名</string>
    <string name="hint_card_num">请输入借记卡号</string>
    <string name="bank_name">选择银行</string>
    <string name="bank_select">选择银行</string>
    <string name="bank_rebind">更换绑定银行卡</string>
    <string name="withdraw_amount_remind">请输入提现金额</string>
    <string name="bind_card_remind_title">绑定银行卡后即可提现</string>
    <string name="format_bank_curr">提现至：%s %s</string>
    <string name="bind_card_remind_content">为保障资金安全,仅限使用一张银行卡提现。如需更换,请联系客服</string>
    <string name="unbind_card">解除绑定银行卡</string>
    <string name="unbind_verify">确认解绑</string>
    <string name="submit">提交</string>
    <string name="withdraw_remind_mayi">蚂蚁投资承诺您的信息安全</string>
    <string name="hint_card_name">请输入持卡人姓名</string>
    <string name="hint_card_bank">请选择银行</string>
    <string name="bind_confirm_title">确认绑定信息</string>
    <string name="back_to_modify">返回修改</string>
    <string name="confirm_done">确认无误</string>
    <string name="bind_succ">绑定成功</string>
    <string name="bind_succ_content">你已成功绑定银行卡</string>
    <string name="just_ok">好的</string>
    <string name="go_withdarw">前往提现</string>
    <string name="withdraw_fail">提现失败</string>
    <string name="withdraw_fail_content">提现失败，请联系客服 \n给您造成的不便，敬请谅解</string>
    <string name="withdraw_succ">提现成功</string>
    <string name="no_deposit">暂无充值记录</string>
    <string name="no_withdraw">暂无提现记录</string>
    <string name="unbind_card_remind">更换绑定银行卡之前，您需要先解绑当前银行卡</string>
    <string name="unbind_card_remind2">如果您在绑定银行卡中碰到任何问题，请联系客服</string>
    <string name="unbind_succ">解除绑定成功</string>
    <string name="unbind_succ_content">您需要绑定一张新的银行卡以提现</string>
    <string name="bind_new">绑定新卡</string>
    <string name="unbind_fail">解除绑定失败</string>
    <string name="unbind_fail_content">请联系客服 \n给您造成的不便，敬请谅解</string>
    <string name="withdraw_fee">手续费(元)</string>
    <string name="withdraw_time_remind">24小时内到账</string>
    <string name="select_pay_method">请选择支付方式</string>

    <string name="bank_list">支持银行</string>
    <string name="withdraw_remind2">如果您在绑定银行卡中碰到任何问题，请联系客服</string>
    <string name="withdraw_remind1"><![CDATA[•\t提现金额<200，收取手续费2元/次]]></string>
    <string name="withdraw_remind22">•\t提现金额≥200，收取手续费提现金额的1%</string>
    <string name="withdraw_remind3">•\t提现手续费2元起申请</string>


    <!--<item name="recharge_wechat_drawable">@drawable/pay_weixin</item>-->
    <!--<item name="recharge_wechat_drawable">@drawable/pay_zhifubao</item>-->
    <!--<item name="recharge_wechat_drawable">@drawable/pay_up</item>-->
</resources>
