<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>



    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="@dimen/default_gap_44">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/recharge_fail"

            android:textColor="@color/text_black"
            android:textSize="@dimen/default_size_40"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_gap_80"
            android:text="@string/recharge_fail_remind"
            android:textSize="@dimen/default_size_34"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="@+id/recharge"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/recharge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_gap_104"
            android:background="@drawable/rect_round_gold_stroke"
            android:text="@string/i_know"
            android:textColor="@color/text_gold_white"
            android:textSize="@dimen/default_size_34"
            android:layout_marginRight="@dimen/default_gap_21"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <Button
            android:id="@+id/button"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:text="@string/contact_service"
            android:background="@drawable/rect_round_gold"
            android:layout_marginLeft="@dimen/default_gap_21"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/recharge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/recharge" />
    </android.support.constraint.ConstraintLayout>
</layout>
