<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="user"
            type="com.zxzx74147.devlib.data.UserData" />
        <variable
            name="fee"
            type="Float"/>

    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/withdraw_title_yuan"
            android:textStyle="bold"
            android:textColor="@color/text_black"
            android:textSize="@dimen/default_size_30"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_gap_24"
            android:background="@drawable/rect_round_grey2"
            android:orientation="vertical"
            android:padding="@dimen/default_gap_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13">

            <TextView
                android:id="@+id/amount_remind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/withdraw_amount_remind"
                android:textColor="@color/text_light_grey" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_gap_14"
                app:font="@{`din`}"
                android:id="@+id/amount"
                android:background="@null"
                android:inputType="numberDecimal"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textColor="@color/text_black"
                android:textSize="@dimen/default_size_48" />
        </LinearLayout>


        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_gap_64"
            android:text="@string/withdraw_max"
            android:textColor="@color/text_dark_grey"
            android:textSize="@dimen/default_size_26"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{@string/format_02(user.balance)}"
            android:textColor="@color/text_dark_grey"
            app:font="@{`din`}"
            android:textSize="@dimen/default_size_26"
            app:layout_constraintBottom_toBottomOf="@+id/textView14"
            app:layout_constraintStart_toEndOf="@+id/textView14" />

        <TextView
            android:id="@+id/all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/withdraw_all"
            android:textColor="@color/text_blue"
            android:textSize="@dimen/default_size_26"
            app:layout_constraintBottom_toBottomOf="@+id/textView14"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_gap_24"
            android:text="@string/withdraw_fee"
            android:textColor="@color/text_dark_grey"
            android:textSize="@dimen/default_size_26"
            app:layout_constraintStart_toStartOf="@+id/textView14"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />


        <TextView
            android:id="@+id/fee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:font="@{`din`}"
            android:text="@{fee==null? @string/str_loading:@string/format_02(fee)}"
            android:textColor="@color/text_dark_grey"
            android:textSize="@dimen/default_size_26"
            app:layout_constraintBottom_toBottomOf="@+id/textView16"
            app:layout_constraintStart_toEndOf="@+id/textView16" />


        <TextView
            android:id="@+id/remind"
            android:drawablePadding="@dimen/default_gap_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/withdraw_time_remind"
            android:textColor="@color/text_dark_grey"
            android:drawableLeft="@drawable/icon_explanation"
            android:textSize="@dimen/default_size_26"
            app:layout_constraintBottom_toBottomOf="@+id/textView16"
            app:layout_constraintEnd_toEndOf="parent" />

        <View
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/textView16"
            android:background="@color/div_default"
            android:layout_marginTop="@dimen/default_gap_32"
            android:layout_height="1px"/>
    </android.support.constraint.ConstraintLayout>
</layout>