<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>


    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/default_gap_44">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="1dp"
            android:text="@string/recharge"
            android:textColor="@color/text_black"
            android:textSize="@dimen/default_size_54"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/recharge_remind"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recharge_select_method"
            android:textColor="@color/text_black"
            android:textSize="@dimen/default_size_34"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/list" />

        <LinearLayout
            android:id="@+id/wechat_layout"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/default_gap_32"
            android:paddingTop="@dimen/default_gap_32"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/pay_weixin" />

            <TextView
                android:layout_width="@dimen/default_gap_130"
                android:layout_height="wrap_content"
                android:text="@string/recharge_wechat"
                android:textColor="@color/text_black"
                android:textSize="@dimen/default_size_30" />

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/recharge_wechat_remind"
                android:textColor="@color/text_light_grey"
                android:textSize="@dimen/default_size_24" />

            <CheckBox
                android:id="@+id/checkbox_wechat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/selector_red_circle"
                android:checked="true" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/alipay_layout"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/default_gap_32"
            android:paddingTop="@dimen/default_gap_32"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wechat_layout">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/pay_zhifubao" />

            <TextView
                android:layout_width="@dimen/default_gap_130"
                android:layout_height="wrap_content"
                android:text="@string/recharge_alipay"
                android:textColor="@color/text_black"
                android:textSize="@dimen/default_size_30" />

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/recharge_alipay_remind"
                android:textColor="@color/text_light_grey"
                android:textSize="@dimen/default_size_24" />

            <CheckBox
                android:layout_width="wrap_content"
                android:id="@+id/checkbox_ali"
                android:layout_height="wrap_content"
                android:button="@drawable/selector_red_circle" />
        </LinearLayout>

        <!--<LinearLayout-->
            <!--android:id="@+id/linearLayout5"-->

            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="horizontal"-->
            <!--android:paddingBottom="@dimen/default_gap_32"-->
            <!--android:paddingTop="@dimen/default_gap_32"-->
            <!--app:layout_constraintEnd_toEndOf="parent"-->
            <!--app:layout_constraintStart_toStartOf="parent"-->
            <!--app:layout_constraintTop_toBottomOf="@+id/linearLayout4">-->

            <!--<ImageView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:src="@drawable/pay_up" />-->

            <!--<TextView-->
                <!--android:layout_width="@dimen/default_gap_130"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/recharge_unipay"-->
                <!--android:textColor="@color/text_black"-->
                <!--android:textSize="@dimen/default_size_30" />-->

            <!--<TextView-->
                <!--android:layout_width="0dip"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1"-->
                <!--android:text="@string/recharge_unipay_remind"-->
                <!--android:textColor="@color/text_light_grey"-->
                <!--android:textSize="@dimen/default_size_24" />-->

            <!--<CheckBox-->
                <!--android:id="@+id/checkbox_uni"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:button="@drawable/selector_red_circle" />-->
        <!--</LinearLayout>-->

        <Button
            android:id="@+id/recharge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_recharge"
            android:background="@drawable/rect_round_red"
            android:textColor="@color/white"
            android:textSize="@dimen/default_size_34"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alipay_layout" />


    </android.support.constraint.ConstraintLayout>
</layout>