<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>


    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_grey"
        android:padding="@dimen/default_gap_44">

        <LinearLayout
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/default_gap_100"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="提现与手续费规则"
                android:textColor="@color/text_black"
                android:textStyle="bold"
                android:textSize="@dimen/default_size_40"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/default_gap_60"
                android:layout_height="wrap_content"
                android:text="@string/withdraw_remind1"
                android:textColor="@color/text_black"
                android:textSize="@dimen/default_size_30" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/default_gap_20"
                android:layout_height="wrap_content"
                android:text="@string/withdraw_remind22"
                android:textColor="@color/text_black"
                android:textSize="@dimen/default_size_30" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/default_gap_20"
                android:layout_height="wrap_content"
                android:text="@string/withdraw_remind3"
                android:textColor="@color/text_black"
                android:textSize="@dimen/default_size_30" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="提现时间"
                android:textStyle="bold"
                android:textColor="@color/text_black"
                android:layout_marginTop="@dimen/default_gap_80"
                android:textSize="@dimen/default_size_40"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/default_gap_60"
                android:layout_height="wrap_content"
                android:text="•交易日任一时间，提现金额在申请提交后1个工作日到账"
                android:textColor="@color/text_black"
                android:textSize="@dimen/default_size_30" />


        </LinearLayout>

        <ImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/icon_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </android.support.constraint.ConstraintLayout>
</layout>