<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="user"
            type="com.zxzx74147.devlib.data.UserData" />

        <variable
            name="bankCard"
            type="com.zxzx74147.balance.data.BankCard" />
        <import type="android.view.View"/>


    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"

        android:paddingBottom="0dp"
        android:paddingTop="0dp">



        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_gap_27"
            android:text="@string/withdraw"
            android:textColor="@color/text_black"
            android:textSize="@dimen/default_size_34"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:background="@null"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="@+id/title"
            app:layout_constraintEnd_toStartOf="@+id/list"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/title"
            app:srcCompat="@drawable/icon_back" />

        <LinearLayout
            android:id="@+id/bank_current"
            android:layout_width="match_parent"
            android:visibility="@{bankCard==null? View.GONE:View.VISIBLE}"
            android:paddingLeft="@dimen/default_gap_46"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@color/red"
            app:layout_constraintTop_toBottomOf="@+id/title"
            android:paddingRight="@dimen/default_gap_46"
            android:layout_height="@dimen/default_gap_80">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@{@string/format_bank_curr(bankCard.bank,bankCard.getBankSecu())}"
                android:gravity="center_vertical|left"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:drawablePadding="@dimen/default_gap_10"
                android:drawableRight="@drawable/more_white"
                android:text="@string/unbind_card"
                android:gravity="center_vertical|left"
                android:textColor="@color/white" />
        </LinearLayout>

        <include
            android:id="@+id/withdraw_amount"
            layout="@layout/layout_withdraw_amouont"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_gap_44"
            android:layout_marginRight="@dimen/default_gap_44"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bank_current"
            app:user="@{user}" />


        <LinearLayout
            android:id="@+id/bank_remind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_gap_30"
            android:orientation="vertical"
            android:visibility="@{bankCard!=null? View.GONE:View.VISIBLE}"
            android:layout_marginLeft="@dimen/default_gap_44"
            android:layout_marginRight="@dimen/default_gap_44"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/withdraw_amount">

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/div_default" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_gap_40"
                android:text="@string/bind_card_remind_title"
                android:drawablePadding="@dimen/default_gap_10"
                android:textColor="@color/text_black"
                android:drawableRight="@drawable/icon_explanation"
                android:textSize="@dimen/default_size_26" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_gap_14"
                android:text="@string/bind_card_remind_content"
                android:textColor="@color/text_light_grey"
                android:textSize="@dimen/default_size_26" />


        </LinearLayout>

        <include
            android:id="@+id/withdraw_bank"
            android:visibility="@{bankCard!=null? View.GONE:View.VISIBLE}"
            android:layout_marginLeft="@dimen/default_gap_44"
            android:layout_marginRight="@dimen/default_gap_44"
            layout="@layout/layout_withdraw_bind_bank_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_gap_30"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bank_remind" />

        <Button
            android:id="@+id/submit"
            android:layout_width="0dp"
            android:background="@drawable/rect_round_red"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/default_size_44"
            android:paddingRight="@dimen/default_size_44"
            android:layout_marginTop="@dimen/default_gap_20"
            android:layout_marginLeft="@dimen/default_gap_44"
            android:layout_marginRight="@dimen/default_gap_44"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="@dimen/default_size_34"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/withdraw_bank"/>

        <TextView

            android:layout_width="0dp"
            android:layout_marginTop="@dimen/default_gap_15"
            android:layout_height="wrap_content"
            android:text="@string/withdraw_remind_mayi"
            android:gravity="center"
            android:textColor="@color/text_dark_grey"
            android:textSize="@dimen/default_size_26"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/submit"/>


    </android.support.constraint.ConstraintLayout>
</layout>